import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "dev.jaczerob.delfino.grpc.proto";
option java_outer_classname = "WorldProto";

message Channel {
  required int32 id = 1;
  required int32 capacity = 2;
}

message WorldMessages {
  required string event = 1;
  required string server = 2;
  required string recommended = 3;
}

message Rates {
  required int32 exp = 1;
  required int32 meso = 2;
  required int32 drop = 3;
  required int32 bossDrop = 4;
  required int32 quest = 5;
  required int32 fishing = 6;
  required int32 travel = 7;
}

message World {
  required int32 id = 1;
  required string name = 2;
  required int32 flag = 3;
  required WorldMessages messages = 4;
  required Rates rates = 5;
  repeated Channel channels = 6;
  required int32 amountPlayers = 7;
}

message WorldsResponse {
  repeated World worlds = 1;
}

service WorldService {
  rpc GetWorlds (google.protobuf.Empty) returns (WorldsResponse);
}